--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^4.3.0
-  firebase_auth: ^6.1.3
-  firebase_database: ^12.1.1
+
+
   cloud_firestore: ^6.1.1
   flutter_riverpod: ^3.0.0
+  supabase_flutter: ^2.8.0
   go_router: ^17.0.1
   google_fonts: ^6.3.3
   image_picker: ^1.2.1
