--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo library access is required to select profile pictures.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera access is required to take profile pictures.</string>
 </dict>
 </plist>
