--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 
+  firebase_core: ^4.3.0
+  firebase_storage: ^13.0.5
   cloud_firestore: ^6.1.1
   flutter_riverpod: ^3.0.0
   supabase_flutter: ^2.8.0
